--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert-node": "^1.2.2",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0-alpha.1",
     "express-session": "^1.15.6",
+    "js-alert": "^1.0.4",
     "moment": "^2.22.2",
     "mongoose": "^5.3.1",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "popups": "^1.1.3",
+    "python-shell": "^1.0.6",
+    "sys": "0.0.1"
   }
 }
